# sanctum-token-ratio

./: CHANGELOG.md  Cargo.toml  README.md
fee-ratio/: CHANGELOG.md  Cargo.toml  DOC.md  README.md
fee-ratio/src/: aft_bef_fee.rs  amts_after_fee.rs  lib.rs
ratio/: Cargo.toml  README.md
ratio/src/: ceil.rs  floor.rs  lib.rs  utils.rs
ratio/src/div/: ceil.rs  floor.rs  mod.rs
u64-ratio/: CHANGELOG.md  Cargo.toml  README.md
u64-ratio/src/: lib.rs
u64-ratio/src/div/: ceil.rs  floor.rs  mod.rs
