[package]
name = "sanctum-fee-ratio"
description = "Abstractions over fees applied as ratios to u64 quantities."
version = "1.0.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
sanctum-u64-ratio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
