[package]
name = "sanctum-token-ratio"
edition.workspace = true
version.workspace = true
license-file.workspace = true
repository.workspace = true
description = "A library for applying ratios to u64 quantities."

[dependencies]

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
